# TT_NoC_TLM

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  noc_l1_if.h  noc_link.cpp  noc_link.h  noc_mesh.cpp  noc_mesh.h  noc_niu.cpp  noc_niu.h  noc_overlay.cpp  noc_overlay.h  noc_router.cpp  noc_router.h  noc_translation.cpp  noc_translation.h  noc_types.h  riscv_core.cpp  riscv_core.h  tensix_tile.cpp  tensix_tile.h  traffic_gen.cpp  traffic_gen.h
tests/: noc_overlay_test.cpp
